compiler/src/test/resources/golden/errors/prop_lambda_unknown.dawn
fn f(xs: List[Option[Int]]) -> Int =
  fold(xs, 0, fn(acc, o) => acc + o?)
