compiler/src/test/resources/golden/errors/prop_lambda_unknown.err
error: `?` on an Option requires the function to return Option[...], but it returns Int
  --> prop_lambda_unknown.dawn:2:35
  |
2 |   fold(xs, 0, fn(acc, o) => acc + o?)
  |                                   ^^
